# toothpaste3Function

./: .gitattributes  .gitignore  README.md  config.example.json  main.py  main.spec  pyproject.toml
.github/workflows/: build-aarch64.yml  lint-test.yml  release.yml
camera/: __init__.py  base.py  environment.py  manager.py  mock.py
core/: __init__.py  config_manager.py  framebuffer.py  license_utils.py  log_config.py  log_throttle.py  task_manager.py  version.py
deploy/: README.md  image_updater.service  install.sh  main.service  uninstall.sh  update-main.sh  upgrade.sh
docs/: ALGORITHMS.md  ARCHITECTURE.md  DEPLOY.md  PERMISSIONS.md  PLC_REGISTERS.md  PLC_legacy_brush_head.md  PLC_legacy_frontback.md  PLC_legacy_height.md  PLC寄存器手册.md  SIMULATION.md
image_updater/: Makefile  README.md  image_updater.c
legacy/: __init__.py  fronback_algorithms.py  fronback_brush_head.py  fronback_display.py  fronback_orchestrator.py  fronback_protocol.py
legacy/sample_roi/: roi_coordinates_template.json
plc/: __init__.py  base.py  codec.py  enums.py  manager.py  mock.py
processing/: __init__.py  algorithms.py  base.py  brush_head.py  display_utils.py  height_check.py  registry.py  result.py  toothpaste_frontback.py
tests/: conftest.py
tests/integration/: test_legacy_orchestrator.py  test_task_manager_pipeline.py
tests/unit/: test_brush_head.py  test_camera_apply_roi.py  test_camera_manager_auto_reinit.py  test_framebuffer.py  test_height_check.py  test_imports.py  test_legacy_algorithms.py  test_legacy_brush_head.py  test_legacy_display.py  test_legacy_protocol.py  test_letterbox.py  test_log_throttle.py  test_mocks.py  test_simulate.py  test_switch_protocol.py  test_toothpaste_frontback.py
tools/: plc_test_gui.py  simulate.py  switch_protocol.py  test_display.py
